--- a/views/buyPets.ejs
+++ b/views/buyPets.ejs
@@ -25,6 +25,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/search">Search Pets</a> <!-- Added search link for convenience -->
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/feedback">Feedback</a> 
+            </li>
           </ul>
         </div>
       </div>
