--- a/views/buyPets.ejs
+++ b/views/buyPets.ejs
@@ -20,6 +20,9 @@
               <a class="nav-link" href="/cart">View Cart</a>
             </li> 
             <li class="nav-item">
+              <a class="nav-link" href="/petGuide">Pets Guide</a> 
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li> 
             <li class="nav-item">
