--- a/views/petguide.ejs
+++ b/views/petguide.ejs
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Pet Shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <title>The Pet Shop</title>
     <link rel="stylesheet" href="styleforpetguide.css">
 </head>
+
 <body style="background-color:#7dd8ea; margin-bottom: 100px;">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
- 
+        <a class="navbar-brand" href="/">The Pet Shop</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navbar-brand" href="/">The Pet Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/addPet">Add New Pet</a>
+              <a class="nav-link" href="/cart">View Cart</a>
             </li> 
             <li class="nav-item">
-              <a class="nav-link" href="/petGuide">Pet Guide</a>
+              <a class="nav-link" href="/petGuide">Pets Guide</a> 
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="/search">Search Pets</a> <!-- Added search link for convenience -->
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/feedback">Feedback</a> 
+            </li>
           </ul>
         </div>
       </div>
