--- a/views/petguide.ejs
+++ b/views/petguide.ejs
@@ -6,7 +6,39 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <title>The Pet Shop</title>
-    <link rel="stylesheet" href="styleforpetguide.css">
+  <style>
+  .s1{
+    margin: 10px;
+    text-align: center;
+    font-size: 25px;
+  }
+  .petsImg{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+  }
+  h1{
+    margin: 0;
+    text-align: center;
+    background-color: #7dd8ea;
+    font-size: 50px;
+}
+
+h2{
+    text-align: center;
+    color: #333;
+    font-size: 35px;
+}
+
+h3 {
+    text-align: center;
+    color: #333;
+    font-size: 25px;
+}
+  .video {
+    text-align: center;
+  }
+  </style>
 </head>
 
 <body style="background-color:#7dd8ea; margin-bottom: 100px;">
@@ -40,12 +72,15 @@
     <main>
       </br></br>
     <h1>Welcome To My Pet Guide!</h1>
+
     <p class="s1">Find comprehensive information and tips for your beloved pets.</p>
+
     <!--Pic-->
     <img src="https://i.pinimg.com/736x/ca/ea/69/caea69b13015a22575500eb2b13a5708.jpg" alt="Pet Picture" class="petsImg">
     </br></br>
     <section class="Class1"></section>
       <h2>Guiding Videos</h2>
+
       <p class="s1">Watch these videos to learn how to take care of your pets:</p>
       </br></br>
       </br></br>
@@ -53,16 +88,19 @@
       <div class="video">
         <!--Dogs-->
         <h3>Dog Care Guide</h3>
+
         <iframe width="640" height="360" src="https://www.youtube.com/embed/Tn3lZE0rRBs" title="How to TAKE CARE of a PUPPY 🐶 Complete Guide to Puppy Care" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
         </br></br>
         <!--Cats-->
         <h3>Cat Care Guide</h3>
+
         <iframe width="654" height="368" src="https://www.youtube.com/embed/uV1RMT_ld3k" title="How to CARE for a KITTEN - Food, Education and Health" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
         </br></br>
         <!--Rabbit-->
         <h3>Rabbit Care Guide</h3>
+
         <iframe width="654" height="368" src="https://www.youtube.com/embed/1s-ydKa7nPA" title="How to TAKE CARE of a RABBIT 🐰 Complete RABBIT CARE Guide" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
     </section>
