--- a/views/petguide.ejs
+++ b/views/petguide.ejs
@@ -13,9 +13,7 @@
     font-size: 25px;
   }
   .petsImg{
-    width:100%;
-    height:100%;
-    object-fit: cover;
+    text-align: center;
   }
   h1{
     margin: 0;
