--- a/views/petguide.ejs
+++ b/views/petguide.ejs
@@ -13,7 +13,9 @@
     font-size: 25px;
   }
   .petsImg{
-    text-align: center;
+    width:100%;
+    height:100%;
+    object-fit: cover;
   }
   h1{
     margin: 0;
