--- a/views/search.ejs
+++ b/views/search.ejs
@@ -97,7 +97,7 @@
 <body>
 
   <!-- Back Button -->
-  <a class="back-button" href="/">← Back</a>
+  <a class="back-button" href="/purchase">← Back</a>
 
   <!-- Toggle Dark Mode Button -->
   <button class="toggle-button" onclick="toggleDarkMode()">Toggle Dark Mode</button>
@@ -133,7 +133,7 @@
 
   <% } else { %>
     <p>No Pet Name found.</p>
-    <a href="/">Back</a>
+  
   <% } %>
 
   <script>
