change colour mode button

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -84,7 +84,7 @@
       padding: 10px 15px;
       border-radius: 5px;
       background-color: #444;
-      color: white;
+      color: green;
       border: none;
       cursor: pointer;
     }
