--- a/views/search.ejs
+++ b/views/search.ejs
@@ -158,7 +158,13 @@
     };
   </script>
 
-  
+  <!-- <form action="/add-to-cart" method="POST">
+    <input type="hidden" name="pet_id" value="<%= result.id %>">
+    <input type="hidden" name="name" value="<%= result.name %>">
+    <input type="hidden" name="price" value="<%= result.price %>">
+    <button type="submit">Add to Cart</button>
+  </form> -->
+
 
 
 
